--- a/src/css/common.css
+++ b/src/css/common.css
@@ -7,3 +7,11 @@
     margin-right: 5px;
     width: 24px;
 }
+
+.iconfont {
+    font-family: "iconfont" !important;
+    font-size: 16px;
+    font-style: normal;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
