--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1,7 +1,7 @@
-@import '../eIcon/index';
-@import '../eIconPicker/index';
+@import './css.css';
 @import 'common.css';
 @import 'eiconfont.css';
+
 @import '~element-plus/lib/theme-chalk/el-input.css';
 @import '~element-plus/lib/theme-chalk/el-popover.css';
 @import '~element-plus/lib/theme-chalk/el-scrollbar.css';
