--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -2,7 +2,9 @@
 @import 'common.css';
 @import 'eiconfont.css';
 
-@import '~element-plus/lib/theme-chalk/el-input.css';
-@import '~element-plus/lib/theme-chalk/el-popover.css';
-@import '~element-plus/lib/theme-chalk/el-scrollbar.css';
-@import '~element-plus/lib/theme-chalk/el-select-dropdown.css';
+@import '~element-plus/theme-chalk/src/base.scss';
+@import '~element-plus/theme-chalk/el-input.css';
+@import '~element-plus/theme-chalk/el-popover.css';
+@import '~element-plus/theme-chalk/el-popper.css';
+@import '~element-plus/theme-chalk/el-scrollbar.css';
+@import '~element-plus/theme-chalk/el-select-dropdown.css';
