--- a/packages/e-icon-picker/components/eIconPicker/src/e-icon-picker.scss
+++ b/packages/e-icon-picker/components/eIconPicker/src/e-icon-picker.scss
@@ -7,7 +7,6 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-   /* justify-content: space-around;*/
 
     li {
       width: 30px;
@@ -19,9 +18,10 @@
         cursor: pointer;
       }
     }
+
     &::after {
       content: '';
-      flex: auto;    /* 或者flex: 1 */
+      flex: auto;
     }
   }
 
