基本功能完成，还差svg图标使用

--- a/packages/e-icon-picker/components/eIcon/src/e-icon.scss
+++ b/packages/e-icon-picker/components/eIcon/src/e-icon.scss
@@ -11,5 +11,9 @@
 }
 
 .e-icon {
-  color: var(--popper-theme-text-color);
+  color: var(--e-icon-color, #333333);
+}
+
+.e-icon-svg {
+  display: inline-block;
 }
