--- a/packages/e-icon-picker/components/eInput/src/e-input.scss
+++ b/packages/e-icon-picker/components/eInput/src/e-input.scss
@@ -5,12 +5,12 @@
   font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB, Microsoft YaHei, Arial, sans-serif;
 
   .prefix-icon {
-    background-color: #f5f7fa;
-    color: #909399;
+    background-color: var(--e-input-prefix-icon-background-color ,#f5f7fa);
+    color: var(--e-input-color ,#909399);
     vertical-align: middle;
     display: table-cell;
     position: relative;
-    border: 1px solid #dcdfe6;
+    border: 1px solid var(--e-input-prefix-icon-border-color ,#dcdfe6);
     padding: 0 20px;
     white-space: nowrap;
     border-right: 0;
@@ -41,11 +41,11 @@
   &-inner {
     flex: 1;
     -webkit-appearance: none;
-    background-color: #fff;
+    background-color: var(--e-input-inner-background-color ,#fff);
     background-image: none;
-    border: 1px solid #dcdfe6;
+    border: 1px solid var(--e-input-inner-border-color ,#dcdfe6);
     box-sizing: border-box;
-    color: #606266;
+    color: var(--e-input-inner-color ,#606266);
     display: inline-block;
     font-size: inherit;
     height: 40px;
@@ -56,7 +56,14 @@
     border-radius: 0 4px 4px 0;
 
     &:focus {
-      border-color: #409EFF;
+      border-color: var(--e-input-inner-focus-border-color ,#409EFF);
     }
+  }
+
+  .is-disabled {
+    cursor: not-allowed;
+    background-color: var(--e-input-inner-disabled-background-color ,#f5f7fa);
+    border-color:  var(--e-input-inner-disabled-border-color ,#dcdfe6);
+    color:var(--e-input-inner-disabled-color , #c0c4cc);
   }
 }
