--- a/packages/e-icon-picker/components/eInput/src/e-input.scss
+++ b/packages/e-icon-picker/components/eInput/src/e-input.scss
@@ -5,18 +5,19 @@
   font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB, Microsoft YaHei, Arial, sans-serif;
 
   .prefix-icon {
-    background-color: var(--e-input-prefix-icon-background-color ,#f5f7fa);
-    color: var(--e-input-color ,#909399);
+    background-color: var(--e-input-prefix-icon-background-color, #f5f7fa);
+    color: var(--e-input-color, #909399);
     vertical-align: middle;
     display: table-cell;
     position: relative;
-    border: 1px solid var(--e-input-prefix-icon-border-color ,#dcdfe6);
+    border: 1px solid var(--e-input-prefix-icon-border-color, #dcdfe6);
     padding: 0 20px;
     white-space: nowrap;
     border-right: 0;
     border-radius: 4px 0 0 4px;
     height: 40px;
     line-height: 40px;
+    box-sizing: border-box;
 
     .e-icon {
       font-size: 16px;
@@ -31,6 +32,7 @@
     display: flex;
     align-items: center;
     cursor: pointer;
+    box-sizing: border-box;
 
     svg {
       width: 14px;
@@ -41,11 +43,11 @@
   &-inner {
     flex: 1;
     -webkit-appearance: none;
-    background-color: var(--e-input-inner-background-color ,#fff);
+    background-color: var(--e-input-inner-background-color, #fff);
     background-image: none;
-    border: 1px solid var(--e-input-inner-border-color ,#dcdfe6);
+    border: 1px solid var(--e-input-inner-border-color, #dcdfe6);
     box-sizing: border-box;
-    color: var(--e-input-inner-color ,#606266);
+    color: var(--e-input-inner-color, #606266);
     display: inline-block;
     font-size: inherit;
     height: 40px;
@@ -56,14 +58,14 @@
     border-radius: 0 4px 4px 0;
 
     &:focus {
-      border-color: var(--e-input-inner-focus-border-color ,#409EFF);
+      border-color: var(--e-input-inner-focus-border-color, #409EFF);
     }
   }
 
   .is-disabled {
     cursor: not-allowed;
-    background-color: var(--e-input-inner-disabled-background-color ,#f5f7fa);
-    border-color:  var(--e-input-inner-disabled-border-color ,#dcdfe6);
-    color:var(--e-input-inner-disabled-color , #c0c4cc);
+    background-color: var(--e-input-inner-disabled-background-color, #f5f7fa);
+    border-color: var(--e-input-inner-disabled-border-color, #dcdfe6);
+    color: var(--e-input-inner-disabled-color, #c0c4cc);
   }
 }
