--- a/packages/components/eIconPicker/src/e-icon-picker.scss
+++ b/packages/components/eIconPicker/src/e-icon-picker.scss
@@ -12,8 +12,11 @@
       width: var(--e-icon-picker-icon-list-width, 30px);
       height: var(--e-icon-picker-icon-list-width, 30px);
       margin: var(--e-icon-picker-icon-list-margin, 5px);
+      display: flex;
+      justify-content: center;
+      align-items: center;
 
-      i, svg {
+      i, svg, div {
         font-size: var(--e-icon-picker-icon-list-font-size, 20px);
         cursor: pointer;
       }
