1. 修复图标对齐问题。 2. 优化暂无图标文字样式。 3. 优化默认追加到body为不追加。 4. 修复搜索过滤图标列表问题。 5. 修复输入框左侧图标大小导致高度和输入框高度不一致问题。 6. 修复文档 复制成功 不显示问题。 7. 修复文档 当编译完后无法正常显示组件问题。

--- a/packages/components/eIconPicker/src/e-icon-picker.scss
+++ b/packages/components/eIconPicker/src/e-icon-picker.scss
@@ -31,6 +31,8 @@
   &-no-data {
     display: block;
     text-align: center;
+    color: var(--e-icon-picker-icon-list-no-data-color, rgba(60, 60, 60, .7));
+    font-size: 14px;
   }
 }
 
