--- a/packages/style/theme.css
+++ b/packages/style/theme.css
@@ -56,6 +56,8 @@
     --e-input-height-default: 32px;
     /*输入框large下高度*/
     --e-input-height-large: 40px;
+    /*当无图标时显示的文字颜色*/
+    --e-icon-picker-icon-list-no-data-color: rgba(60, 60, 60, .7)
 }
 
 .light {
@@ -118,4 +120,6 @@
     --e-input-height-default: 32px;
     /*输入框large下高度*/
     --e-input-height-large: 40px;
+    /*当无图标时显示的文字颜色*/
+    --e-icon-picker-icon-list-no-data-color: #f5f7fa
 }
