--- a/packages/components/eInput/src/e-input.scss
+++ b/packages/components/eInput/src/e-input.scss
@@ -61,6 +61,10 @@
     .prefix-icon {
       padding: 0 20px;
     }
+
+    input {
+      line-height: inherit;
+    }
   }
 
   &--small {
@@ -71,6 +75,10 @@
     .prefix-icon {
       padding: 0 8px;
     }
+
+    input {
+      line-height: inherit;
+    }
   }
 
   &--default {
@@ -80,6 +88,10 @@
 
     .prefix-icon {
       padding: 0 12px;
+    }
+
+    input {
+      line-height: inherit;
     }
   }
 
