--- a/docs/.vitepress/theme/styles/index.scss
+++ b/docs/.vitepress/theme/styles/index.scss
@@ -1,1 +1,35 @@
 @import './layout.scss';
+/* 整个滚动条*/
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+  border-radius: 3px;
+  display: block;
+}
+
+/*定义滚动条轨道 内阴影+圆角*/
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0);
+  border-radius: 5px; /*滚动条的背景区域的圆角*/
+}
+/*滚动条上的滚动滑块*/
+::-webkit-scrollbar-thumb {
+  position: relative;
+  display: block;
+  width: 8px;
+  height: 8px;
+  cursor: pointer;
+  border-radius: 3px;
+  background-color: rgba(144, 147, 153, .2);
+  -webkit-transition: .3s background-color;
+  transition: .3s background-color;
+  padding-bottom: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(144, 147, 153, .5);
+}
+
+div[class*='language-'] {
+  padding-bottom: 2px;
+}
