--- a/docs/.vitepress/theme/styles/index.scss
+++ b/docs/.vitepress/theme/styles/index.scss
@@ -29,7 +29,10 @@
 ::-webkit-scrollbar-thumb:hover {
   background-color: rgba(144, 147, 153, .5);
 }
-
+/* 同时有垂直和水平滚动条时交汇的部分 */
+::-webkit-scrollbar-corner {
+  display: none;    /* 修复交汇时出现的白块 */
+}
 div[class*='language-'] {
   padding-bottom: 2px;
 }
