--- a/docs/.vitepress/theme/styles/index.scss
+++ b/docs/.vitepress/theme/styles/index.scss
@@ -12,6 +12,7 @@
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0);
   border-radius: 5px; /*滚动条的背景区域的圆角*/
 }
+
 /*滚动条上的滚动滑块*/
 ::-webkit-scrollbar-thumb {
   position: relative;
@@ -29,10 +30,26 @@
 ::-webkit-scrollbar-thumb:hover {
   background-color: rgba(144, 147, 153, .5);
 }
+
 /* 同时有垂直和水平滚动条时交汇的部分 */
 ::-webkit-scrollbar-corner {
-  display: none;    /* 修复交汇时出现的白块 */
+  display: none; /* 修复交汇时出现的白块 */
 }
+
 div[class*='language-'] {
   padding-bottom: 2px;
+}
+
+:root {
+  --vp-c-brand: #646cff;
+  --vp-c-brand-light: #747bff;
+  --vp-c-brand-lighter: #9499ff;
+  --vp-c-brand-lightest: #bcc0ff;
+  --vp-c-brand-dark: #535bf2;
+  --vp-c-brand-darker: #454ce1;
+  --vp-c-divider-light: rgba(60, 60, 60, 0.12);
+}
+
+.dark {
+  --vp-c-divider-light: rgba(84, 84, 84, 0.48);
 }
