1. 修复input框高度显示问题。 2. 修复install Myapp类型不认识问题。 3. 添加layui-vue图标。 4. 添加feather-icons图标使用，即外部svg图标。 5. 完善docs。 6. 更新依赖。

--- a/docs/.vitepress/theme/styles/index.scss
+++ b/docs/.vitepress/theme/styles/index.scss
@@ -39,7 +39,13 @@
 div[class*='language-'] {
   padding-bottom: 2px;
 }
-
+.el-button{
+  height: auto!important;
+}
+.el-dialog{
+  width: var(--el-dialog-width,50%)!important;
+  margin: var(--el-dialog-margin-top,15vh) auto 50px!important;
+}
 :root {
   --vp-c-brand: #646cff;
   --vp-c-brand-light: #747bff;
